# iterative

./: .gitignore  CONTRIBUTING.md  README.md  publish.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: ai_iterative_assistant_chain_scenario.md  example_goal.md  iter_agent_assistant_prompt.md  unit_tests_doc.md
nested_test_project/yolo/api/: users.py
nested_test_project/yolo/models/: user.py
scripts/: version_bump.py
src/iterative/: __init__.py  action_processing.py  api_processing.py  cache.py  cli.py  cli_app_integration.py  config.py  default_config.yaml  logger.py  mkdocs.yml  models.py  run_ngrok.sh  server_management.py  test_version.py  user_cli.py  util_server.py  utils.py  web.py  web_app_integration.py
src/iterative/.iterative/: config.yaml  mkdocs.yml
src/iterative/actions/: ai_actions.py  api_actions.py  assistant_actions.py  code_actions.py  endpoint_actions.py  metadata_actions.py  model_actions.py  project_actions.py  service_actions.py  test_actions.py
src/iterative/api/: health.py
src/iterative/commands/: admin_commands.py  admin_ui_commands.py  template_commands.py
src/iterative/docs/: ai_action_system.md  api_errors.md  execute_action_calls.md  frontend_nextjs_project_structure.md  iter_agent_assistant_prompt.md  iter_agent_game_prompt.md  nosql_yorm.md  simulation_experiments  unit_tests_doc.md
src/iterative/models/: action.py  assistant.py  config.py  project.py  project_file.py  project_folder.py
src/iterative/scripts/: ai_functions.py  code_functions.py  create_endpoints_from_models.py  create_models.py  default_utils.py  endpoint_functions.py  meta_functions.py  model_functions.py
src/iterative/service/: assistant_manager.py  conversation_manager.py
src/iterative/tests/: test_api_utils.py  test_import_utils.py  (+2 more)
test_project/.iterative/: config.yaml
test_project/api/: new_api.py
test_project/service/: server.py
tests/: test_ai_actions.py
vscode-iterative/: README.md  package-lock.json  package.json  tsconfig.json
vscode-iterative/media/: main.js  style.css
vscode-iterative/resources/: iterative-icon-theme.json
vscode-iterative/src/: extension.ts
(+43 files in other folders)
