[tool.poetry]
name = "iterative"
version = "0.0.3"
description = "The package to build iterative codebases with AI at the core."
authors = ["Benjamin Garrard <ben@colorfull.ai>"]
packages = [{ from = "src", include = "iterative" }]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^4.4.0"
pydantic = "^1.8.2"
inflect = "^7.0.0"
nosql_yorm = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iterative = "iterative.cli:main"
