[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "iterative"
version = "0.2.3"
description = "The package to build iterative codebases with AI at the core."
authors = [ "Benjamin Garrard <ben@colorfull.ai>",]
[[tool.poetry.packages]]
from = "src"
include = "iterative"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
inflect = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
toml = "^0.10.2"

[tool.poetry.scripts]
iterative = "iterative:main"

[tool.pytest.ini_options]
filterwarnings = [ "ignore::DeprecationWarning:pkg_resources.*:", "ignore::DeprecationWarning:google.rpc.*:",]
